--- a/src/compilation.tex
+++ b/src/compilation.tex
@@ -2,7 +2,7 @@
 
 \begin{xfr}
 %RASM ne nécessite aucune installation, il se résume à un unique fichier binaire éxécutable.
-Cette section décrit la procédure pour compiler RASM sur différentes plateformes, le code source C étant disponible. De plus, il est possible d'integrer RASM dans vos propres applications, ce qui sera vu a la prochaine suivante.
+Cette section décrit la procédure pour compiler RASM sur différentes plateformes, le code source C étant disponible. De plus, il est possible d'integrer RASM dans vos propres applications, ce qui sera vu a la prochaine section.
 \end{xfr}
 
 \subsection{\xlang{Compiler RASM}{Building RASM}}
