--- a/src/zx.tex
+++ b/src/zx.tex
@@ -5,7 +5,7 @@ RASM intègre aussi quelques options et directives qui ne concernent que l'archi
 \end{xfr}
 
 \begin{xen}
-RASM also features a few options and directives for ZX architecture.
+RASM also features a few options and directives specific for ZX architecture.
 \end{xen}
 
 
@@ -43,9 +43,7 @@ Use this directive for selecting a bank (0..7)
 
 \begin{xfr}
 l'option \texttt{-sx} permet de réaliser un export pour certaines émulateurs ZX, en précisant la banque où le symbole est logé (\texttt{(<bank>:<adresse>)})
-
 \end{xfr}
-
 
 \begin{xen}
 \texttt{-sx} option can be used for exporting symbols for ZX emulators, where the selected bank is output. \texttt{(<bank>:<adresse>)}
