issue #16: ZX0 compression

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -78,7 +78,8 @@ La présente documentation est maintenue par Stéphane Sikora, merci de faire re
 \item code duration evaluation
 \end{itemize}
 
-Rasm is licenced under MIT licence (see Annex \ref{licenses} for the complete list of licenses).
+Rasm is licenced under MIT licence. 
+%(see Annex \ref{licenses} for the complete list of licenses).
 \medbreak
 This documentation is maintained by Stephane Sikora, please send any feedback to
 
