--- a/src/main.tex
+++ b/src/main.tex
@@ -36,13 +36,13 @@
 
 \fancyhead[L]{}
 \fancyhead[R]{}
-\fancyhead[C]{RASM}
+\fancyhead[C]{RASM : \xlang{Manuel de Référence}{Reference Manual}}
 \setlength{\parindent}{0pt}
 
-\title{RASM: Roudoudou's Z80 Assembler V1.3}
+\title{RASM V1.5 : \xlang{Manuel de Référence}{Reference Manual}}
 
-%\author{\'Edouard BERG\'E (Roudoudou) , St\'ephane SIKORA}
-\author{\'Edouard BERG\'E (Roudoudou)}
+\author{\'Edouard BERG\'E \and St\'ephane SIKORA}
+%\author{\'Edouard BERG\'E (Roudoudou)}
 \makeindex
 
 \begin{document}
