--- a/src/zx.tex
+++ b/src/zx.tex
@@ -12,37 +12,73 @@ RASM also features a few options and directives specific for ZX architecture.
 \subsection{\xlang{Directive HOBETA}{HOBETA Directive}}\index{HOBETA}\label{HOBETA}
 
 \begin{verbatim}
-HOBETA
+SAVE 'filename', start, length, HOBETA
 \end{verbatim}
 
 \begin{xfr}
-Cette directive sert a génerer un fichier au format HOBETA, en ajoutant l'entete adaptée
+Cette directive est un parametre supplémentaire pour la directide \texttt{SAVE}, de facon à générer un fichier avec une entete HOBETA, en ajoutant l'entete adaptée.
+Hobeta est un format pour stocker des fichiers TR-DOS, utilisé principalement par les anciens émulateurs ZX Spectrum. 
+%Le format a maintenant reçu une nouvelle vie dans l'ordinateur ZX Evolution. 
+
+%La particularité du format est qu'un seul fichier TR-DOS est stocké dans un fichier Hobeta . 
+Le fichier Hobeta est essentiellement une copie d'octet du fichier TR-DOS avec un en-tête de 17 octets:
+%L'extension de fichier est obtenue en ajoutant le caractère "$" devant l'extension du fichier TR-DOS d'origine .
+%Le format est apparu avec le copieur Hobeta du même nom (hobeta.exe 19.11.1990 : "HoBeta V2.0, Copyright (C) 1990, InterCompex, Soviet-Swiss JV" - voir Le Hobbit ).
+%Description des formats
+\begin{tabular}{lll}
++0  & 8 octets & nom de fichier TR-DOS \\
++8  & 1 octet  & type de fichier (extension) TR-DOS \\
++9  & 2 octets & Paramètre de fichier START \\
++11 & 2 octets & paramètre LENGTH du fichier (longueur en octets) \\
++13 & 2 octets & taille du fichier en secteurs \\
++15 & 2 octets & somme de contrôle des 15 octets précédents (pas le fichier lui-même!) \\
+\end{tabular}
+
+%Données:
+%Copie d'octet de tous les secteurs du fichier
+%L'octet de poids fort de la taille du fichier en secteurs doit toujours être 0.
+
+Algorithme de calcul de la somme de contrôle:
+\[ \sum_{i=0}^{i<=14}{header[i]*257+i} \]
+
+%Somme de contrôle = 0 ;
+%pour (i = 0; i <= 14; CheckSum = CheckSum + (en-tête [i] * 257) + i, i ++);
+%Les fichiers binaires (avec l'extension. $ C) dans ce format peuvent être exécutés directement à partir de périphériques FAT (tels qu'un disque dur ou une carte SD) intégré au shell Evo Reset Service.
+
 \end{xfr}
 
 \begin{xen}
-Use this directive for generating a file in HOBETA format
+Use this directive for generating a file in \texttt{HOBETA} format
 \end{xen}
 
-\subsection{\xlang{Selection des Banques}{Bank Selection}}
+
+
 
 \subsubsection{\xlang{Directive BUILDZX}{BUILDZX Directive}}\index{BANK}\label{ZXBANK}
-
 \begin{verbatim}
-BUILDZX <bank>
+BUILDZX
 \end{verbatim}
 
 \begin{xfr}
-Cette directive sert a selection l'une des 8 banques (0..7)
+Cette directive sert a activer la génération de snapshot.
+A noter qu'il est possible d'ajouter un second parametre à la directie \texttt{RUN}, afin de spécifier l'adresse de la pile (\texttt{SP})
 \end{xfr}
 
 \begin{xen}
-Use this directive for selecting a bank (0..7) 
+Use this directive to enable ZX SNA file generation (Snaphsot) 
+With ZX SNA, you can add a second parameter to RUN directive
 \end{xen}
+
+\begin{code}
+BUILDZX
+BANK 0
+RUN \#8000,\#6000 ; Entry point=\#8000, SP=\#6000
+\end{code}
 
 \subsection{\xlang{Options spécifiques}{Options}}
 
 \begin{xfr}
-l'option \texttt{-sx} permet de réaliser un export pour certaines émulateurs ZX, en précisant la banque où le symbole est logé (\texttt{(<bank>:<adresse>)})
+L'option \texttt{-sx} permet de réaliser un export pour certaines émulateurs ZX, en précisant la banque où le symbole est logé (\texttt{(<bank>:<adresse>)})
 \end{xfr}
 
 \begin{xen}
