--- a/src/compilation.tex
+++ b/src/compilation.tex
@@ -29,7 +29,7 @@ make prod
 \paragraph{Windows (Visual Studio)}
 
 \begin{verbatim}
-combil.bat
+compil.bat
 \end{verbatim}
 
 \paragraph{Dos/Windows 32 (Watcom)}
