--- a/src/usage.tex
+++ b/src/usage.tex
@@ -107,14 +107,14 @@ For example, it can be useful for debugging a program with Winape.
 \end{xen}
 
 \begin{verbatim}
-  RASM.exe test -o grouik -s
+  RASM.exe test -o foo -s
   Pre-processing [test.asm]
   Assembling
-  Write binary file grouik.bin (25 bytes)
-  Write symbol file grouik.sym (10 bytes)
+  Write binary file foo.bin (25 bytes)
+  Write symbol file foo.sym (10 bytes)
 \end{verbatim}
 
-\xlang{Le fichier .sym est de la forme:}{The symbol file looks like this:}
+\xlang{Le fichier \texttt{.sym} est de la forme:}{The symbol file looks like this:}
 
 \begin{verbatim}
   LABEL1 #0 B0
@@ -123,7 +123,7 @@ For example, it can be useful for debugging a program with Winape.
   LABEL4 #4 B0
 \end{verbatim}
 
-\xlang{Avec l'option -sp, le fichier de symboles est le suivant:}{With -sp option: }
+\xlang{Avec l'option \texttt{-sp}, le fichier de symboles est le suivant:}{With \texttt{-sp} option: }
 
 \begin{verbatim}
   LABEL1 EQU 00000H
@@ -132,7 +132,7 @@ For example, it can be useful for debugging a program with Winape.
   LABEL4 EQU 00004H
 \end{verbatim}
 
-\xlang{Avec l'option -sw, le fichier de symboles est compatible avec Winape:}{With -sw, symbols are exported in Winape format:}
+\xlang{Avec l'option \texttt{-sw}, le fichier de symboles est compatible avec Winape:}{With \texttt{-sw}, symbols are exported in Winape format:}
 
 \begin{verbatim}
   LABEL1 #0
@@ -280,12 +280,12 @@ By default, included files are searched in the local folder, paths are relative,
 Ces options sont moins courantes ,mais peuvent parfois etre utiles pour le débug.
 \begin{itemize}
 \item -v : mode verbeux, affiche des informations et statistiques sur l'assemblage
-\item -void : permet de forcer l'utilisation de (void) pour les macros sans parametre (\ref{macro})
+\item -void : permet de forcer l'utilisation de (void) pour les macros sans parametre (\ref{MACRO})
 \item -wu : Affiche des warnings lorsque des alias, des variables ou des labels sont déclarés mais non utilisés
-\item -d : produit des informations lors du pré-processing
-\item -a : produit des informations lors de l'assemblage
+%\item -d : produit des informations lors du pré-processing
+%\item -a : produit des informations lors de l'assemblage
 \item -n : affiche les licences tierces
-\item -xpr : pour l'export de fichiers cartouche étendues, permet d'exporter des fichiers supplémentaires par bloc de 512KO (\ref{XPR})
+\item -xpr : pour l'export de fichiers cartouche étendues, permet d'exporter des fichiers supplémentaires par bloc de 512KO
 \end{itemize}
 
 \end{xfr}
@@ -300,7 +300,7 @@ These options are useful in rare occasions, it can sometime help for tracking bu
 \item -d : verbose detailed pre-processing
 \item -a : verbose detailed assembling
 \item -n : display third parties licences
-\item -xpr : for extended cartdidge export, generate additional files for every 512KB slot (\ref{XPR})
+\item -xpr : for extended cartdidge export, generate additional files for every 512KB slot
 \end{itemize}
 
 \end{xen}
