added projects using rasm

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -13,8 +13,13 @@ Résultat: RASM présente des performances d'assemblage très élevées en condi
 \medskip
 Aujourd'hui Rasm est utilisé dans de nombreux projets d'envergure:
 \begin{itemize}[noitemsep]
+\item Arkos Tracker II par Targhan (de façon intégrée au logiciel)
+\item Bubble Quest par Roudoudou (wip)
 \item Ghost'n Goblins par Golem13
-\item Arkos Tracker II par Targhan de façon intégrée au logiciel
+\item Puzzle Bubble par Redbug
+\item Rasmlive (https://rasmlive.amstrad.info)
+\item Sonic GX par Condense 
+\item Tower Defense par Roudoudou
 \end{itemize}
 
 \end{xfr}
@@ -26,11 +31,16 @@ It was not my first attempt to write such a tool: 18 years ago, i had already wr
 
 RASM uses efficient algorithmic patterns, such as merkel trees, caches, and grouped memory allocation.
 Thanks to its linear conception, performances in real conditions are really high, it's particularly fast, even with huge projects.
-\medbreak
+\medskip
 Nowadays RASM is used on big projects such as:
 \begin{itemize}[noitemsep]
-\item Ghost'n Goblins by Golem13 - still in development, for CPC+ architectures.
 \item Arkos Tracker II by Targhan (embedded in the software) % Ca serait interessant de préciser pourquoi et comment
+\item Bubble Quest by Roudoudou (wip)
+\item Ghost'n Goblins by Golem13 - still in development, for CPC+ architectures.
+\item Puzzle Bubble by Redbug
+\item Rasmlive (https://rasmlive.amstrad.info)
+\item Sonic GX by Condense (WIP)
+\item Tower Defense by Roudoudou
 \end{itemize}
 
 \end{xen}
@@ -56,9 +66,9 @@ Nowadays RASM is used on big projects such as:
 \item calcul de la durée des instructions
 \end{itemize}
 \medbreak
-Rasm est diffusé sous licence MIT (voir Annexe \ref{licenses} pour l'ensemble des licenses).
+Rasm est diffusé sous licence MIT.
 \medbreak
-La présente documentation est maintenue par Stéphane Sikora, merci de faire remonter vos remarques à l'adresse \texttt{sikoogle+rasm@gmail.com}.
+La présente documentation est maintenue par Stéphane Sikora, merci de faire remonter vos remarques et corrections ici: \texttt{https://github.com/sikorama/rasm-doc} .
 \end{xfr}
 
 \begin{xen}
@@ -81,9 +91,7 @@ La présente documentation est maintenue par Stéphane Sikora, merci de faire re
 Rasm is licenced under MIT licence. 
 %(see Annex \ref{licenses} for the complete list of licenses).
 \medbreak
-This documentation is maintained by Stephane Sikora, please send any feedback to
-
-\texttt{sikoogle+rasm@gmail.com} .
+This documentation is maintained by Stephane Sikora, please send any feedback to \texttt{https://github.com/sikorama/rasm-doc}
 
 \end{xen}
 
